# mcp-winauto

./: .gitignore  README.md  automation.py  main.py  pyproject.toml  server.py  spec.md
